--- a/LazyMorningMenu.html
+++ b/LazyMorningMenu.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="LazyMorning.CSS">
+    <link rel="stylesheet" href="LazyMorning.css">
     <title>Menu</title>
 </head>
 <body>
