--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   </header>
 
   <main>
-    <p>Replace all of the images with images of your choice and appropriate captions. Include two paragraphs about the contents of your site.  Do not remove the skip to top link.</p>
+    <p>Here is my final assignment for the Advanced Styling with Responsive Design Course.</p>
 
-    <p>Below are photos that show some of the beauty of the American Southwest. These photos were taken on a recent trip. Locations include the Grand Canyon, and areas outside of Sedona and Phoenix, Arizona.</p>
+    <p>Below are photos of the American Southwest. These photos were taken on a recent trip, and locations include the Grand Canyon, and areas outside of Sedona and Phoenix, Arizona.</p>
     
     <div class = "grid">
         <figure>
